--- a/exer.html
+++ b/exer.html
@@ -10,23 +10,23 @@
         <div class="screen">
             <div class="header">
                 <div class="left">
-                    <div class="cadr"></div>
-                    <div class="cadr"></div>
-                    <div class="cadr"></div>
-                    <div class="cadr"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
                 </div>
                 <div class="right">
-                    <div class="cadr"></div>
+                    <div class="card"></div>
                 </div>
             </div>
             <div class="posts">
                 <div class="left">
-                    <div class="cadr"></div>
-                    <div class="cadr2"></div>
-                    <div class="cadr3"></div>
+                    <div class="card"></div>
+                    <div class="card2"></div>
+                    <div class="card3"></div>
                 </div>
                 <div class="right">
-                    <div class="cadr"></div>
+                    <div class="card"></div>
                 </div>
             </div>
             <div class="posts2"></div>
