--- a/exer.html
+++ b/exer.html
@@ -53,31 +53,32 @@
                     <div class="card"></div>
                 </div>
                 <div class="right">
-                    <div class="card"></div>
-                    <div class="card2"></div>
-                    <div class="card"></div>
-                    <div class="card2"></div>
-                    <div class="card"></div>
-                    <div class="card2"></div>
-                    <div class="card"></div>
-                    <div class="card2"></div>
-                    <div class="card"></div>
-                    <div class="card2"></div>
-                    <div class="card"></div>
-                    <div class="card2"></div>
-                    <div class="card"></div>
-                    <div class="card2"></div>
-                    <div class="card"></div>
-                    <div class="card2"></div>
-                    <div class="card"></div>
-                    <div class="card2"></div>
-                    <div class="card"></div>
-                    <div class="card2"></div>
-                    <div class="card"></div>
-                    <div class="card2"></div>
-                    <div class="card"></div>
-                    <div class="card2"></div>
-                    
+                    <div class="container">
+                         <div class="card"></div>
+                         <div class="card2"></div>
+                         <div class="card"></div>
+                         <div class="card2"></div>
+                         <div class="card"></div>
+                         <div class="card2"></div>
+                         <div class="card"></div>
+                         <div class="card2"></div>
+                         <div class="card"></div>
+                         <div class="card2"></div>
+                         <div class="card"></div>
+                         <div class="card2"></div>
+                         <div class="card"></div>
+                         <div class="card2"></div>
+                         <div class="card"></div>
+                         <div class="card2"></div>
+                         <div class="card"></div>
+                         <div class="card2"></div>
+                         <div class="card"></div>
+                         <div class="card2"></div>
+                         <div class="card"></div>
+                         <div class="card2"></div>
+                         <div class="card"></div>
+                         <div class="card2"></div>
+                    </div>   
                     
                 </div>
             </div>
