Add content to header and others

--- a/exer.html
+++ b/exer.html
@@ -10,23 +10,34 @@
         <div class="screen">
             <div class="header">
                 <div class="left">
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
+                    <div class="card"><a>Home</a></div>
+                    <div class="card"><a>About Us</a></div>
+                    <div class="card"><a>Services</a></div>
+                    <div class="cardd"><a>STARTED</a></div>
                 </div>
                 <div class="right">
-                    <div class="card"></div>
+                    <img src="icons/icon.png" alt="">
+                    <h>Game Shop</h> 
+                     <input type="text" placeholder="Search..">
                 </div>
             </div>
+
             <div class="posts">
                 <div class="left">
-                    <div class="card"></div>
-                    <div class="card2"></div>
-                    <div class="card3"></div>
+                    <div class="card"><a>Game and Game Tools</a></div>
+                    <div class="card2"><a>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                         Soluta autem vitae ab blanditiis, consequatur nam fugit necessitatibus voluptates,
+                          consequuntur unde eligendi magnam magni consectetur nobis laboriosam modi? Accusantium,
+                           pariatur ea?</a>
+                        </div>
+                    <div class="card3">
+                        <img src="icons/icon2 (2).png" alt="">
+                        <img src="icons/icon3.png" alt="">
+                        <img src="icons/icon4 (2).png" alt="">
+                    </div>
                 </div>
                 <div class="right">
-                    <div class="card"></div>
+                    <div class="card"><img src="icons/2024.jpg"></div>
                 </div>
             </div>
             <div class="posts2">
