--- a/exer.html
+++ b/exer.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <div class="right">
-                    <div class="card"><img src="icons/2024.jpg"></div>
+                    <div class="card"><img src="icons/2024.png"></div>
                 </div>
             </div>
             <div class="posts2">
