--- a/exer.html
+++ b/exer.html
@@ -42,7 +42,17 @@
             </div>
             <div class="posts2">
                 <div class="left">
-                    <div class="card"></div>
+                    <div class="card">
+                      <div class="games">
+                        <img src="icons/game1.jpg" alt="">
+                      </div>
+                      <div class="games">
+                        <img src="icons/game2.avif" alt="">
+                      </div>
+                      <div class="games">
+                        <img src="icons/game3.jpg" alt="">
+                      </div>
+                    </div>
                     <div class="card"></div>
                     <div class="card"></div>
                     <div class="card"></div>
@@ -65,30 +75,142 @@
                 </div>
                 <div class="right">
                     <div class="container">
-                         <div class="card"></div>
-                         <div class="card2"></div>
-                         <div class="card"></div>
-                         <div class="card2"></div>
-                         <div class="card"></div>
-                         <div class="card2"></div>
-                         <div class="card"></div>
-                         <div class="card2"></div>
-                         <div class="card"></div>
-                         <div class="card2"></div>
-                         <div class="card"></div>
-                         <div class="card2"></div>
-                         <div class="card"></div>
-                         <div class="card2"></div>
-                         <div class="card"></div>
-                         <div class="card2"></div>
-                         <div class="card"></div>
-                         <div class="card2"></div>
-                         <div class="card"></div>
-                         <div class="card2"></div>
-                         <div class="card"></div>
-                         <div class="card2"></div>
-                         <div class="card"></div>
-                         <div class="card2"></div>
+                         <div class="card">
+                            <div class="text">Play Station1</div>
+                            <img src="icons/ps2.jpg" alt="">
+                         </div>
+                         <div class="card2">
+                            <div class="text">New Price: 20000&
+                                <div class="text2">Old Price: 30000$</div>
+                                <button>Buy</button>
+                                <button>Report</button>
+                            </div>
+                         </div>
+                         <div class="card">
+                            <div class="text">Play Station2</div>
+                            <img src="icons/ps2.jpg" alt="">
+                         </div>
+                         <div class="card2">
+                            <div class="text">New Price: 20000&
+                                <div class="text2">Old Price: 30000$</div>
+                                <button>Buy</button>
+                                <button>Report</button>
+                            </div>
+                         </div>
+                         <div class="card">
+                            <div class="text">Play Station3</div>
+                            <img src="icons/ps2.jpg" alt="">
+                         </div>
+                         <div class="card2">
+                            <div class="text">New Price: 20000&
+                                <div class="text2">Old Price: 30000$</div>
+                                <button>Buy</button>
+                                <button>Report</button>
+                            </div>
+                         </div>
+                         <div class="card">
+                            <div class="text">Play Station4</div>
+                            <img src="icons/ps2.jpg" alt="">
+                         </div>
+                         <div class="card2">
+                            <div class="text">New Price: 20000&
+                                <div class="text2">Old Price: 30000$</div>
+                                <button>Buy</button>
+                                <button>Report</button>
+                            </div>
+                         </div>
+                         <div class="card">
+                            <div class="text">Play Station5</div>
+                            <img src="icons/ps2.jpg" alt="">
+                         </div>
+                         <div class="card2">
+                            <div class="text">New Price: 20000$
+                                <div class="text2">Old Price: 30000$</div>
+                                <button>Buy</button>
+                                <button>Report</button>
+                            </div>
+                         </div>
+                         <div class="card">
+                            <div class="text">Play Station6</div>
+                            <img src="icons/ps2.jpg" alt="">
+                         </div>
+                         <div class="card2">
+                            <div class="text">New Price: 20000$
+                                <div class="text2">Old Price: 30000$</div>
+                                <button>Buy</button>
+                                <button>Report</button>
+                            </div>
+                         </div>
+                         <div class="card">
+                            <div class="text">Play Station7
+                            </div>
+                            <img src="icons/ps2.jpg" alt="">
+                         </div>
+                         <div class="card2">
+                            <div class="text">New Price: 20000$
+                                <div class="text2">Old Price: 30000$</div>
+                                <button>Buy</button>
+                                <button>Report</button>
+                            </div>
+                         </div>
+                         <div class="card">
+                            <div class="text">Play Station8</div>
+                            <img src="icons/ps2.jpg" alt="">
+                         </div>
+                         <div class="card2">
+                            <div class="text">New Price: 20000$
+                                <div class="text2">Old Price: 30000$</div>
+                                <button>Buy</button>
+                                <button>Report</button>
+                            </div>
+                         </div>
+                         <div class="card">
+                            <div class="text">Play Station9</div>
+                            <img src="icons/ps2.jpg" alt="">
+                         </div>
+                         <div class="card2">
+                            <div class="text">New Price: 20000$
+                                <div class="text2">Old Price: 30000$</div>
+                                <button>Buy</button>
+                                <button>Report</button>
+                            </div>
+                         </div>
+                         <div class="card">
+                            <div class="text">Play Station10</div>
+                            <img src="icons/ps2.jpg" alt="">
+                         </div>
+                         <div class="card2">
+                            <div class="text">New Price: 20000$
+                                <div class="text2">Old Price: 30000$</div>
+                                <button>Buy</button>
+                                <button>Report</button>
+                            </div>
+                         </div>
+                         <div class="card">
+                            <div class="text">Play Station11</div>
+                            <img src="icons/ps2.jpg" alt="">
+                         </div>
+                         <div class="card2">
+                            <div class="text">New Price: 20000$
+                                <div class="text2">Old Price: 30000$</div>
+                                <button>Buy</button>
+                                <button>Report</button>
+                            </div>
+                         </div>
+                         <div class="card">
+                            <div class="text">Play Station12</div>
+                            <img src="icons/ps2.jpg" alt="">
+                         </div>
+                         <div class="card2">
+                            <div class="text">New Price: 20000$
+                                <div class="text2">Old Price: 30000$</div>
+                                <button>Buy</button>
+                                <button>Report</button>
+                            </div>
+                            <div class="comments">
+                                <button>Your Comments</button>
+                            </div>
+                         </div>
                     </div>   
                     
                 </div>
