--- a/exer.html
+++ b/exer.html
@@ -35,6 +35,7 @@
                         <img src="icons/icon3.png" alt="">
                         <img src="icons/icon4 (2).png" alt="">
                     </div>
+                    
                 </div>
                 <div class="right">
                     <div class="card"><img src="icons/2024.png"></div>
@@ -53,8 +54,11 @@
                         <img src="icons/game3.jpg" alt="">
                       </div>
                     </div>
-                    <div class="card"></div>
-                    <div class="card"></div>
+                    <div class="card2">
+                        <div class="ad">
+                            <img src="icons/ad.jpg" alt="">
+                        </div>
+                    </div>
                     <div class="card"></div>
                     <div class="card"></div>
                     <div class="card"></div>
@@ -85,6 +89,10 @@
                                 <button>Buy</button>
                                 <button>Report</button>
                             </div>
+                            <div class="comments">
+                                <button>Your Comments</button>
+                            </div>
+                            <div class="recentcm">Recent comments</div>
                          </div>
                          <div class="card">
                             <div class="text">Play Station2</div>
@@ -96,6 +104,10 @@
                                 <button>Buy</button>
                                 <button>Report</button>
                             </div>
+                            <div class="comments">
+                                <button>Your Comments</button>
+                            </div>
+                            <div class="recentcm">Recent comments</div>
                          </div>
                          <div class="card">
                             <div class="text">Play Station3</div>
@@ -107,6 +119,10 @@
                                 <button>Buy</button>
                                 <button>Report</button>
                             </div>
+                            <div class="comments">
+                                <button>Your Comments</button>
+                            </div>
+                            <div class="recentcm">Recent comments</div>
                          </div>
                          <div class="card">
                             <div class="text">Play Station4</div>
@@ -118,6 +134,10 @@
                                 <button>Buy</button>
                                 <button>Report</button>
                             </div>
+                            <div class="comments">
+                                <button>Your Comments</button>
+                            </div>
+                            <div class="recentcm">Recent comments</div>
                          </div>
                          <div class="card">
                             <div class="text">Play Station5</div>
@@ -129,6 +149,10 @@
                                 <button>Buy</button>
                                 <button>Report</button>
                             </div>
+                            <div class="comments">
+                                <button>Your Comments</button>
+                            </div>
+                            <div class="recentcm">Recent comments</div>
                          </div>
                          <div class="card">
                             <div class="text">Play Station6</div>
@@ -140,6 +164,10 @@
                                 <button>Buy</button>
                                 <button>Report</button>
                             </div>
+                            <div class="comments">
+                                <button>Your Comments</button>
+                            </div>
+                            <div class="recentcm">Recent comments</div>
                          </div>
                          <div class="card">
                             <div class="text">Play Station7
@@ -152,6 +180,10 @@
                                 <button>Buy</button>
                                 <button>Report</button>
                             </div>
+                            <div class="comments">
+                                <button>Your Comments</button>
+                            </div>
+                            <div class="recentcm">Recent comments</div>
                          </div>
                          <div class="card">
                             <div class="text">Play Station8</div>
@@ -163,6 +195,10 @@
                                 <button>Buy</button>
                                 <button>Report</button>
                             </div>
+                            <div class="comments">
+                                <button>Your Comments</button>
+                            </div>
+                            <div class="recentcm">Recent comments</div>
                          </div>
                          <div class="card">
                             <div class="text">Play Station9</div>
@@ -174,6 +210,10 @@
                                 <button>Buy</button>
                                 <button>Report</button>
                             </div>
+                            <div class="comments">
+                                <button>Your Comments</button>
+                            </div>
+                            <div class="recentcm">Recent comments</div>
                          </div>
                          <div class="card">
                             <div class="text">Play Station10</div>
@@ -185,6 +225,10 @@
                                 <button>Buy</button>
                                 <button>Report</button>
                             </div>
+                            <div class="comments">
+                                <button>Your Comments</button>
+                            </div>
+                            <div class="recentcm">Recent comments</div>
                          </div>
                          <div class="card">
                             <div class="text">Play Station11</div>
@@ -196,6 +240,10 @@
                                 <button>Buy</button>
                                 <button>Report</button>
                             </div>
+                            <div class="comments">
+                                <button>Your Comments</button>
+                            </div>
+                            <div class="recentcm">Recent comments</div>
                          </div>
                          <div class="card">
                             <div class="text">Play Station12</div>
@@ -210,6 +258,7 @@
                             <div class="comments">
                                 <button>Your Comments</button>
                             </div>
+                            <div class="recentcm">Recent comments</div>
                          </div>
                     </div>   
                     
