--- a/exer.html
+++ b/exer.html
@@ -54,12 +54,32 @@
                         <img src="icons/game3.jpg" alt="">
                       </div>
                     </div>
-                    <div class="card2">
+                    <div class="card">
                         <div class="ad">
                             <img src="icons/ad.jpg" alt="">
                         </div>
+                        <div class="img2">
+                            <img src="icons/ad3.jpg" alt="">
+                        </div>
+                        <a>Here Click</a>
                     </div>
-                    <div class="card"></div>
+                    <div class="card">
+                        <div class="up">Live Games</div>
+                        <div class="bottom">
+                            <div class="img3">
+                                <img src="icons/live.jpg" alt="">
+                            </div>
+                            <div class="img3">
+                                <img src="icons/live.jpg" alt="">
+                            </div>
+                            <div class="img3">
+                                <img src="icons/live.jpg" alt="">
+                            </div>
+                            <div class="img3">
+                                <img src="icons/live.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
                     <div class="card"></div>
                     <div class="card"></div>
                     <div class="card"></div>
