--- a/exer.html
+++ b/exer.html
@@ -80,9 +80,42 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
+                    <div class="card">
+                        <div class="logo">
+                            <img src="icons/logo1.png" alt="">
+                        </div>
+                       <div class="text3">
+                         Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                         Obcaecati, dignissimos velit. Lorem ipsum dolor sit amet consectetur<br>
+                         adipisicing elit. Labore natus rem ipsa, temporibus, consequatur sunt <br>
+                         quasi magni quas commodi nisi, repudiandae earum culpa ea?<br>
+                         Adipisci ipsa dolorem dicta! Iusto, explicabo.
+                       </div>
+                    </div>
+                    <div class="card">
+                        <video width="500" controls>
+                            <source src="squeedgame.mp4" type="video/mp4">
+                            <source src="squeedgame.mp4" type="video/ogg">
+                            Your browser does not support HTML5 video.
+                        </video>
+                    </div>
+                    <div class="card">
+                        <div class="up">Live Games</div>
+                        <div class="bottom">
+                            <div class="img3">
+                                <img src="icons/live.jpg" alt="">
+                            </div>
+                            <div class="img3">
+                                <img src="icons/live.jpg" alt="">
+                            </div>
+                            <div class="img3">
+                                <img src="icons/live.jpg" alt="">
+                            </div>
+                            <div class="img3">
+                                <img src="icons/live.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
                     <div class="card"></div>
                     <div class="card"></div>
                     <div class="card"></div>
