--- a/exer.html
+++ b/exer.html
@@ -116,7 +116,24 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card"></div>
+                    <div class="card">
+                        <form>
+                            <label for="fname">First Name</label>
+                            <input type="text" placeholder="">
+                        </form>
+                        <form>
+                            <label for="lname">Last Name</label>
+                            <input type="text" placeholder="">
+                        </form>
+                        <form>
+                            <label for="User">Username</label>
+                            <input type="text" placeholder="">
+                        </form>
+                        <form>
+                            <label for="Pass">Password</label>
+                            <input type="text" placeholder="">
+                        </form>
+                    </div>
                     <div class="card"></div>
                     <div class="card"></div>
                     <div class="card"></div>
@@ -313,6 +330,7 @@
                             </div>
                             <div class="recentcm">Recent comments</div>
                          </div>
+                         
                     </div>   
                     
                 </div>
